# ocserv-agent

./: .air.toml  .env.example  .gitignore  .golangci.yml  .yamllint.yml  CLAUDE_PROMPT.md  CURRENT-STATUS.md  Dockerfile  LICENSE  Makefile  PHASE-4-SUMMARY.md  PHASE-6-DAY1-SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  SUMMARY.md  TESTING.md  TESTING_PROD.md  compose.qa.yaml  config.example.toml  config.example.yaml  config.yaml.example  go.mod  go.sum
.claude/agents/: ocserv-protocol-specialist.md
.github/: CODEOWNERS  CONTRIBUTING.md  WORKFLOWS.md  dependabot.yml
.github/workflows/: ci.yml  lint.yml  package.yml  release.yml  security.yml
cmd/agent/: main.go  main_phase2.go
cmd/vpn-auth/: main.go
deploy/: Containerfile.dev-go
deploy/ansible/: README.md  ansible.cfg  pyproject.toml  requirements.yml
deploy/ansible/inventory/: production.yml
deploy/ansible/playbooks/: deploy-agent.yml  rollback-agent.yml  setup-test-user.yml  verify-ocserv.yml
deploy/ansible/roles/test-user/defaults/: main.yml
deploy/ansible/roles/test-user/tasks/: main.yml
deploy/ansible/roles/test-user/templates/: sudoers.j2
deploy/compose/: .env.example  README.md  ansible.yml  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.test.yml  github-runner-debian.yml  github-runner.yml  mock-ocserv.yml  security.yml
deploy/scripts/: generate-compose.sh
deploy/systemd/: ocserv-agent.service
docs/: CERTIFICATES.md  CI_OPTIMIZATION.md  DEPLOYMENT.md  GRPC_TESTING.md  LOCAL_TESTING.md  OCCTL_COMMANDS.md  OPERATIONS.md  OSSF_SCORECARD.md  OSSF_SCORECARD_IMPROVEMENTS.md  PACKAGING.md  QA_TESTING.md  SECURITY_TOOLS.md  WIKI_MIGRATION_PLAN.md
docs/releases/: TEMPLATE.md  v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.3.1.md  v0.4.0-devops.md  v0.4.0.md  v0.5.0.md  v0.6.0.md
scripts/: build-all.sh  deploy-and-test.sh  generate-proto.sh  install-hooks.sh  migrate_zerolog_to_slog.sh  qa_report.py  quick-check.sh  security-check.sh  test-grpc.sh  test-local.sh
(+140 files in other folders)
