[tool.poetry]
name = "ocserv-agent-ansible"
version = "0.1.0"
description = "Ansible automation for ocserv-agent deployment and testing"
authors = ["ocserv-agent <noreply@anthropic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
ansible = "12.1.0"
ansible-core = "2.19.3"
# Additional Ansible dependencies
jinja2 = "^3.1.4"
pyyaml = "^6.0.2"
cryptography = "^44.0.0"
# SSH and networking
paramiko = "^3.5.0"
netaddr = "^1.3.0"
# Useful Ansible modules
jmespath = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ansible-lint = "^24.10.0"
yamllint = "^1.35.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
