[tool.poetry]
name = "ocserv-agent-ansible"
version = "0.1.0"
description = "Ansible automation for ocserv-agent deployment and testing"
authors = ["ocserv-agent <noreply@anthropic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
# Ansible versions
# Note: PYSEC-2020-220 (CVE-2020-25635) is a false positive
#   - Vulnerability affects aws_ssm connection plugin (not used in this project)
#   - Debian tracker confirms regular Ansible package not affected
#   - ansible 12.1.0 is 4+ years newer than CVE-2020-25635 (2020-10-05)
ansible = "12.1.0"
ansible-core = "2.19.3"
# Additional Ansible dependencies
jinja2 = "^3.1.4"
pyyaml = "^6.0.2"
cryptography = "^44.0.0"
# SSH and networking
paramiko = "^3.5.0"
netaddr = "^1.3.0"
# Useful Ansible modules
jmespath = "^1.0.1"

# Dev dependencies removed due to ansible-lint compatibility issues
# ansible-lint requires will-not-work-on-windows-try-from-wsl-instead
# which is not available. Linting can be added later if needed.
# [tool.poetry.group.dev.dependencies]
# ansible-lint = "^24.10.0"
# yamllint = "^1.35.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
